update for theme(default user lubuntu)
Signed-off-by: Late Lee <li@latelee.org>

--- a/work/etc/pcmanfm_home.desktop
+++ b/work/etc/pcmanfm_home.desktop
@@ -42,8 +42,8 @@ Name[tr]=Dosya Yöneticisi PCManFM
 Name[ug]=ھۆججەت باشقۇرغۇ PCManFM
 Name[uk]=Менеджер файлів PCManFM
 Name[vi]=Bộ quản lý tập tin PCManFM
-Name[zh_CN]=家目录
-Name[zh_TW]=家目录
+Name[zh_CN]=主目录
+Name[zh_TW]=主目录
 GenericName=File Manager
 GenericName[ar]=مدير الملفات
 GenericName[be]=Файлавы менеджар
