--- a/work/etc/ubiquity.desktop
+++ b/work/etc/ubiquity.desktop
@@ -60,7 +60,7 @@ Name[tl]=Iluklok ang RELEASE
 Name[tr]=RELEASE Kurulumu
 Name[uk]=Встановити RELEASE
 Name[vi]=Cài đặt RELEASE
-Name[zh_CN]=安装！系统！
+Name[zh_CN]=安装系统
 Name[zh_TW]=安裝 RELEASE
 Comment=Install this system permanently to your hard disk
 Comment[am]=ይኼን ሲስተም ሀርድ ዲስክዎ ላይ በቋሚነት ይጫኑት
