--- a/work/etc/pcmanfm_rootfs.desktop
+++ b/work/etc/pcmanfm_rootfs.desktop
@@ -43,7 +43,7 @@ Name[ug]=ھۆججەت باشقۇرغۇ PCManFM
 Name[uk]=Менеджер файлів PCManFM
 Name[vi]=Bộ quản lý tập tin PCManFM
 Name[zh_CN]=根目录
-Name[zh_TW]=根目录 # 檔案系统 繁体
+Name[zh_TW]=根目录
 GenericName=File Manager
 GenericName[ar]=مدير الملفات
 GenericName[be]=Файлавы менеджар
