delete .doc file, add new .md file, update desktop, update update.sh

--- a/work/xlock/xlock.desktop
+++ b/work/xlock/xlock.desktop
@@ -1,10 +1,8 @@
 [Desktop Entry]
 Icon=system-lock-screen
 Exec=xlockless
-NoDisplay=true
 Type=Application
-Categories=GTK;System;TerminalEmulator;
-Keywords=console;command line;execute;
+Categories=GTK;System;Utility;
 
 Name=ScreenLock
 Name[ar]=قفل الشاشة
